--- a/docker/vaultwarden.yaml
+++ b/docker/vaultwarden.yaml
@@ -1,14 +1,16 @@
 version: "3"
 services:
   vaultwarden:
-    image: vaultwarden/server:latest
     container_name: vaultwarden
-    environment:
-      - USER=1000:1000
-      - DOMAIN=https://pw.koder.page
-    volumes:
-      - /syno/docker/vaultwarden:/data
-    ports:
-      - 3012:3012
-      - 10001:80
+    image: vaultwarden/server:latest
     restart: unless-stopped
+    volumes:
+      - data:/data/
+    ports:
+      - 10001:80
+volumes:
+  data:
+    driver_opts:
+      type: nfs
+      o: "addr=192.168.10.2,nfsvers=4,rw"
+      device: ":/volume1/01_Docker/password"
