--- a/Server/promtail.yaml
+++ b/Server/promtail.yaml
@@ -14,6 +14,6 @@ scrape_configs:
       - targets:
           - localhost
         labels:
-          job: nestjs
-          host: ani-relayer
+          job: "nestjs"
+          host: "project-name"
           __path__: /var/lib/docker/containers/*/*.log
